force-app/main/default/objects/Insolvency_Account__c/Insolvency_Account__c.object-meta.xml
<CustomObject>
    <description>This custom object represents individual accounts owned by the Insolvent Debtor included as part of the insolvency filing.</description>
    <label>Insolvency Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insolvency Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>