force-app/main/default/objects/Insolvency_Account__c/fields/Accepted_Sent_to_Collections__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Sent_to_Collections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Sent to Collections</label>
    <type>Checkbox</type>
</CustomField>