force-app/main/default/objects/Insolvency_Account__c/fields/Account_Details_Verified__c.field-meta.xml
<CustomField>
    <fullName>Account_Details_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box once the account details in this section are validated and confirmed.</description>
    <inlineHelpText>Check this box once the account details in this section are validated and confirmed.</inlineHelpText>
    <label>Account Details Verified</label>
    <type>Checkbox</type>
</CustomField>