force-app/main/default/objects/Insolvency_Account__c/fields/Account_Is_Putback__c.field-meta.xml
<CustomField>
    <fullName>Account_Is_Putback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when an account has been put back to the client after purchase.</description>
    <inlineHelpText>Check this box when an account has been put back to the client after purchase.</inlineHelpText>
    <label>Account is a Putback</label>
    <type>Checkbox</type>
</CustomField>