force-app/main/default/objects/Insolvency_Account__c/fields/Account_No_without_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Account_No_without_Prefix__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE( Name , &apos; &apos;, &apos;&apos;) , &apos;BNSBK&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account No without Prefix</label>
    <type>Text</type>
</CustomField>