force-app/main/default/objects/Insolvency_Account__c/fields/Account_Number_Without_Space__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Without_Space__c</fullName>
    <description>This field has been created to store account number with out spaces. Actual account number may have space but this is removed in this field using workflow.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number Without Space</label>
    <length>80</length>
    <type>Text</type>
</CustomField>