force-app/main/default/objects/Insolvency_Account__c/fields/Account_Open_date__c.field-meta.xml
<CustomField>
    <fullName>Account_Open_date__c</fullName>
    <description>Account Open date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Account Open date</inlineHelpText>
    <label>Account Open Date</label>
    <type>Date</type>
</CustomField>