force-app/main/default/objects/Insolvency_Account__c/fields/Account_PIF__c.field-meta.xml
<CustomField>
    <fullName>Account_PIF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PIF check box</inlineHelpText>
    <label>Account PIF</label>
    <type>Checkbox</type>
</CustomField>