force-app/main/default/objects/Insolvency_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>The type of product / financial service account.</description>
    <inlineHelpText>The type of product / financial service account.</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Auto Loan</fullName>
            </value>
            <value>
                <fullName>Bank Card Product</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Online Loans</fullName>
            </value>
            <value>
                <fullName>Overdraft - Retail</fullName>
            </value>
            <value>
                <fullName>Overdraft - Small Business</fullName>
            </value>
            <value>
                <fullName>Scotia Plan Loan</fullName>
            </value>
            <value>
                <fullName>Small Business</fullName>
            </value>
            <value>
                <fullName>Small Business Visa</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>Unauthorized Overdraft</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Core Walmart Rewards Mastercard</fullName>
            </value>
            <value>
                <fullName>World Walmart Rewards Mastercard</fullName>
            </value>
            <value>
                <fullName>Home Equity Secured Mastercard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>