force-app/main/default/objects/Insolvency_Account__c/fields/Accounts_Validation_Done_By__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Validation_Done_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accounts Validation Done By</description>
    <inlineHelpText>Accounts Validation Done By</inlineHelpText>
    <label>Accounts Validation Done By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Insolvency_Accounts8</relationshipName>
    <type>Lookup</type>
</CustomField>