force-app/main/default/objects/Insolvency_Account__c/fields/Acknowledgement_date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acknowledgement date</label>
    <type>Date</type>
</CustomField>