force-app/main/default/objects/Insolvency_Account__c/fields/Acquired_Purchase_Face_Value__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Purchase_Face_Value__c</fullName>
    <label>Acquired Purchase Face Value</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>