force-app/main/default/objects/Insolvency_Account__c/fields/Acquired_Purchase_Factor__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Purchase_Factor__c</fullName>
    <label>Acquired Purchase Factor</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>