force-app/main/default/objects/Insolvency_Account__c/fields/Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Status__c</fullName>
    <description>The status of this account (whether it is active or not).</description>
    <inlineHelpText>The status of this account (whether it is active or not).</inlineHelpText>
    <label>Active Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>