force-app/main/default/objects/Insolvency_Account__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>