force-app/main/default/objects/Insolvency_Account__c/fields/Agencies_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Agencies_Accounts__c</fullName>
    <label>Agencies Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_for_No_PoC_Required_Dropdown__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canaccede Financial Group(CFG)</fullName>
            </value>
            <value>
                <fullName>Capital Recovery Service Ltd (CBV)</fullName>
            </value>
            <value>
                <fullName>EOS Canada Inc</fullName>
            </value>
            <value>
                <fullName>Financial Debt Recovery(FDR)</fullName>
            </value>
            <value>
                <fullName>Mac Financial Recovery Inc</fullName>
            </value>
            <value>
                <fullName>PRA Group Canada Inc</fullName>
            </value>
            <value>
                <fullName>Pyxis Customer Solutions Ltd</fullName>
            </value>
            <value>
                <fullName>Razor Capital</fullName>
            </value>
            <value>
                <fullName>Resolve Financial Recovery (RFR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>