force-app/main/default/objects/Insolvency_Account__c/fields/Alias_es__c.field-meta.xml
<CustomField>
    <fullName>Alias_es__c</fullName>
    <description>Debtor_2_Alias_Name__c</description>
    <formula>Insolvency__r.Debtor_2_Alias_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alias(es)</label>
    <type>Text</type>
</CustomField>