force-app/main/default/objects/Insolvency_Account__c/fields/Amended_Claim_Flag__c.field-meta.xml
<CustomField>
    <fullName>Amended_Claim_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to drive a change on the PoC Form 31 letter when checked, indicating the PoC has been amended from a previous submission.</description>
    <inlineHelpText>Used to drive a change on the PoC Form 31 letter when checked, indicating the PoC has been amended from a previous submission.</inlineHelpText>
    <label>Amended Claim</label>
    <type>Checkbox</type>
</CustomField>