force-app/main/default/objects/Insolvency_Account__c/fields/Amended_PoC_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Amended_PoC_Created_Date__c</fullName>
    <description>Amended PoC Created Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Amended PoC Created Date</inlineHelpText>
    <label>Amended PoC Created Date</label>
    <type>DateTime</type>
</CustomField>