force-app/main/default/objects/Insolvency_Account__c/fields/Annulled_Status_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annulled_Status_Claim_Amount__c</fullName>
    <description>Annulled status claim amount, for reporting purpose only</description>
    <formula>IF(TEXT(Insolvency_Status__c) == &apos;Annulled&apos;, Claim_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annulled status claim amount, for reporting purpose only</inlineHelpText>
    <label>Annulled Status Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>