force-app/main/default/objects/Insolvency_Account__c/fields/Annulled_Status_Count__c.field-meta.xml
<CustomField>
    <fullName>Annulled_Status_Count__c</fullName>
    <description>Annulled status count, for reporting purpose only</description>
    <formula>IF(TEXT(Insolvency_Status__c) == &apos;Annulled&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annulled status count, for reporting purpose only</inlineHelpText>
    <label>Annulled Status Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>