force-app/main/default/objects/Insolvency_Account__c/fields/Annulment_Date__c.field-meta.xml
<CustomField>
    <fullName>Annulment_Date__c</fullName>
    <description>Update wiith Insolvency Annulment Date</description>
    <formula>Insolvency__r.Insolvency_Annulled_Date__c</formula>
    <inlineHelpText>Insolvency Annulment Date</inlineHelpText>
    <label>Annulment Date</label>
    <type>Date</type>
</CustomField>