force-app/main/default/objects/Insolvency_Account__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <description>This field tracks the status of this account as an asset to Canaccede.</description>
    <inlineHelpText>This field tracks the status of this account as an asset to Canaccede.</inlineHelpText>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>De-securitized by Seller</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Putback</fullName>
            </value>
            <value>
                <fullName>De-securitization requested</fullName>
            </value>
            <value>
                <fullName>Bulk Purchased</fullName>
            </value>
            <value>
                <fullName>Duplicate Purchased</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Putback Pending</fullName>
            </value>
            <value>
                <fullName>Buyback</fullName>
            </value>
            <value>
                <fullName>Debt Purchase</fullName>
            </value>
            <value>
                <fullName>Buyback Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>