force-app/main/default/objects/Insolvency_Account__c/fields/Auto_POC_Exception_Reported__c.field-meta.xml
<CustomField>
    <fullName>Auto_POC_Exception_Reported__c</fullName>
    <description>As part of POC Automation, this field value will be set based on the type of exception that occurred</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>As part of POC Automation, this field value will be set based on the type of exception that occurred</inlineHelpText>
    <label>Auto POC Exception Reported</label>
    <length>255</length>
    <type>Text</type>
</CustomField>