force-app/main/default/objects/Insolvency_Account__c/fields/Back_to_Collections_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Back_to_Collections_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Back to Collections Review Completed</description>
    <inlineHelpText>Back to Collections Review Completed</inlineHelpText>
    <label>Back to Collections Review Completed</label>
    <type>Checkbox</type>
</CustomField>