force-app/main/default/objects/Insolvency_Account__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Bank Name</description>
    <formula>CASE(TEXT(Client_Identifier__c), &apos;Goeasy&apos;, &apos;Easyfinancial&apos;, TEXT(Client_Identifier__c))</formula>
    <inlineHelpText>Bank Name</inlineHelpText>
    <label>Bank Name</label>
    <type>Text</type>
</CustomField>