force-app/main/default/objects/Insolvency_Account__c/fields/Borrower_Coborrower_1__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Coborrower_1__c</fullName>
    <description>Provide the full name of the co-borrower on this account, if there is one, in order of &quot;First Middle Last&quot;.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide the full name of the co-borrower on this account, if there is one, in order of &quot;First Middle Last&quot;.</inlineHelpText>
    <label>Co-Borrower</label>
    <length>50</length>
    <type>Text</type>
</CustomField>