force-app/main/default/objects/Insolvency_Account__c/fields/Borrower_Coborrower_2__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Coborrower_2__c</fullName>
    <description>Provide the full name of additional co-borrowers on this account, if there are any.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide the full name of additional co-borrowers on this account, if there are any.</inlineHelpText>
    <label>Co-Borrower 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>