force-app/main/default/objects/Insolvency_Account__c/fields/Borrower_Details_Verified__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Details_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to indicate that the Borrower and Co-borrowers section has been verified.</description>
    <inlineHelpText>Check this box to indicate that the Borrower and Co-borrowers section has been verified.</inlineHelpText>
    <label>Borrower Details Verified</label>
    <type>Checkbox</type>
</CustomField>