force-app/main/default/objects/Insolvency_Account__c/fields/Borrower_Primary__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Primary__c</fullName>
    <description>Provide the full name of the primary borrower on this account, in order of &quot;First Middle Last&quot;.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide the full name of the primary borrower on this account, in order of &quot;First Middle Last&quot;.</inlineHelpText>
    <label>Primary Borrower</label>
    <length>100</length>
    <type>Text</type>
</CustomField>