force-app/main/default/objects/Insolvency_Account__c/fields/Bulk_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Payment_Amount__c</fullName>
    <description>The amount of a debtor&apos;s bulk payment to the Trustee, if any</description>
    <formula>Insolvency__r.Bulk_Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of a debtor&apos;s bulk payment to the Trustee, if any</inlineHelpText>
    <label>Bulk Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>