force-app/main/default/objects/Insolvency_Account__c/fields/Bulk_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Payment_Date__c</fullName>
    <description>The date a bulk payment will be made, is any</description>
    <formula>Insolvency__r.Bulk_Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date a bulk payment will be made, is any</inlineHelpText>
    <label>Bulk Payment Date</label>
    <type>Date</type>
</CustomField>