force-app/main/default/objects/Insolvency_Account__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Business Account</description>
    <inlineHelpText>Business Account</inlineHelpText>
    <label>Business Account</label>
    <type>Checkbox</type>
</CustomField>