force-app/main/default/objects/Insolvency_Account__c/fields/Canaccede_reviewed__c.field-meta.xml
<CustomField>
    <fullName>Canaccede_reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canaccede reviewed</label>
    <type>Checkbox</type>
</CustomField>