force-app/main/default/objects/Insolvency_Account__c/fields/Canadian_Tire_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Canadian_Tire_Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent on file</fullName>
            </value>
            <value>
                <fullName>Pending to sent on File</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>