force-app/main/default/objects/Insolvency_Account__c/fields/CFG_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>CFG_Open_Cases__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Open CFG Assignments</description>
    <inlineHelpText>Number of Open CFG Assignments</inlineHelpText>
    <label>Del Number of Open Assignments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>