force-app/main/default/objects/Insolvency_Account__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Debtor_2_Mailing_City__c</description>
    <formula>Insolvency__r.Debtor_2_Mailing_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>