force-app/main/default/objects/Insolvency_Account__c/fields/Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount__c</fullName>
    <description>This value will be filed on the proof-of-claim documentation as the final amount owed on this account by the debtor(s).</description>
    <inlineHelpText>This value will be filed on the proof-of-claim documentation as the final amount owed on this account by the debtor(s).</inlineHelpText>
    <label>Claim Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>