force-app/main/default/objects/Insolvency_Account__c/fields/Claim_Amounts_Validated__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amounts_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box once the above claim amounts and payment information for the proof of claim have been validated, and updated if necessary.</description>
    <inlineHelpText>Check this box once the above claim amounts and payment information for the proof of claim have been validated, and updated if necessary.</inlineHelpText>
    <label>Claim Amounts Validated</label>
    <type>Checkbox</type>
</CustomField>