force-app/main/default/objects/Insolvency_Account__c/fields/Claim_Filed_By__c.field-meta.xml
<CustomField>
    <fullName>Claim_Filed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Claim Filed By</description>
    <inlineHelpText>Claim Filed By</inlineHelpText>
    <label>Claim Filed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Insolvency_Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>