force-app/main/default/objects/Insolvency_Account__c/fields/Claim_Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Filed_Date__c</fullName>
    <description>Date on which Claim Filed for Insolvency Account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date on which Claim Filed for Insolvency Account</inlineHelpText>
    <label>Claim Filed Date</label>
    <type>DateTime</type>
</CustomField>