force-app/main/default/objects/Insolvency_Account__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <description>Indicate whether this is a secured or unsecured account.</description>
    <inlineHelpText>Indicate whether this is a secured or unsecured account.</inlineHelpText>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Secured</fullName>
            </value>
            <value>
                <fullName>Unsecured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>