force-app/main/default/objects/Insolvency_Account__c/fields/Client_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Client_Identifier__c</fullName>
    <label>Client Identifiers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fidem</fullName>
            </value>
            <value>
                <fullName>Canaccede</fullName>
            </value>
            <value>
                <fullName>Scotia Bank</fullName>
            </value>
            <value>
                <fullName>SDA</fullName>
            </value>
            <value>
                <fullName>SPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>