force-app/main/default/objects/Insolvency_Account__c/fields/Co_Debtor__c.field-meta.xml
<CustomField>
    <fullName>Co_Debtor__c</fullName>
    <description>Name of the co-debtor</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the co-debtor</inlineHelpText>
    <label>Co-Debtor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>