force-app/main/default/objects/Insolvency_Account__c/fields/Co_Debtor_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Co_Debtor_Deceased__c</fullName>
    <formula>Insolvency__r.Co_Debtor_Deceased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To flag a Co-debtor as deceased</inlineHelpText>
    <label>Co-Debtor Deceased</label>
    <type>Checkbox</type>
</CustomField>