force-app/main/default/objects/Insolvency_Account__c/fields/Co_Debtor_DOB__c.field-meta.xml
<CustomField>
    <fullName>Co_Debtor_DOB__c</fullName>
    <description>Co-Debtor Date Of Birth populated in the Overview section</description>
    <formula>Debtor_2_Date_of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Co-Debtor Date Of Birth</inlineHelpText>
    <label>Co-Debtor DOB</label>
    <type>Date</type>
</CustomField>