force-app/main/default/objects/Insolvency_Account__c/fields/Co_Debtor_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Debtor_Name__c</fullName>
    <description>Co-Debtor Name populate in the Overview section</description>
    <formula>Co_Debtor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Co-Debtor Name</inlineHelpText>
    <label>Co-Debtor Name</label>
    <type>Text</type>
</CustomField>