force-app/main/default/objects/Insolvency_Account__c/fields/Control_Group__c.field-meta.xml
<CustomField>
    <fullName>Control_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Control Group</description>
    <label>Control Group</label>
    <type>Checkbox</type>
</CustomField>