force-app/main/default/objects/Insolvency_Account__c/fields/CreatedBy_Alias_Name__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Alias_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CreatedBy Alias Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>