force-app/main/default/objects/Insolvency_Account__c/fields/CreatedBy_User_Alias__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_User_Alias__c</fullName>
    <formula>CreatedBy.Alias</formula>
    <label>CreatedBy User Alias</label>
    <type>Text</type>
</CustomField>