force-app/main/default/objects/Insolvency_Account__c/fields/Creditor_Id__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Id__c</fullName>
    <description>Creditor Id from Creditor package</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Creditor Id from Creditor package</inlineHelpText>
    <label>Creditor Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>