force-app/main/default/objects/Insolvency_Account__c/fields/CTB_Balance_as_of_date__c.field-meta.xml
<CustomField>
    <fullName>CTB_Balance_as_of_date__c</fullName>
    <description>Canadian tire provided balance as of date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Canadian tire provided balance as of date</inlineHelpText>
    <label>Balance as of date</label>
    <type>Date</type>
</CustomField>