force-app/main/default/objects/Insolvency_Account__c/fields/CTB_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>CTB_Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field to store DOB provided by CTB</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>