force-app/main/default/objects/Insolvency_Account__c/fields/CTB_Outgoing_File_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CTB_Outgoing_File_Timestamp__c</fullName>
    <description>This field is created as a part of CTB Automation and will be used to store date/time when CTB insolvency file was generated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field used to store date/time when CTB insolvency file was generated</inlineHelpText>
    <label>CTB Outgoing File Timestamp</label>
    <type>DateTime</type>
</CustomField>