force-app/main/default/objects/Insolvency_Account__c/fields/CTB_Reject_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>CTB_Reject_Reason_Code__c</fullName>
    <inlineHelpText>Client's rejection code/reason indicator</inlineHelpText>
    <label>Reject Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BKPT</fullName>
            </value>
            <value>
                <fullName>CONS</fullName>
            </value>
            <value>
                <fullName>SOLD</fullName>
            </value>
            <value>
                <fullName>DDEC</fullName>
            </value>
            <value>
                <fullName>MLNS</fullName>
            </value>
            <value>
                <fullName>NMAT</fullName>
            </value>
            <value>
                <fullName>NINS</fullName>
            </value>
            <value>
                <fullName>NPRP</fullName>
            </value>
            <value>
                <fullName>NRTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>