force-app/main/default/objects/Insolvency_Account__c/fields/CTB_Statements_Received__c.field-meta.xml
<CustomField>
    <fullName>CTB_Statements_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Statements received from the bank and uploaded to the account</description>
    <inlineHelpText>Statements received and uploaded to the account</inlineHelpText>
    <label>Statements Received</label>
    <type>Checkbox</type>
</CustomField>