force-app/main/default/objects/Insolvency_Account__c/fields/CTB_Statements_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>CTB_Statements_Received_Date__c</fullName>
    <description>Date when statements were received on the account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when statements were received on the account</inlineHelpText>
    <label>Statements Received Date</label>
    <type>Date</type>
</CustomField>